# TL-Offline-POS-System

./: README.md  pyproject.toml
apps/edge/: Dockerfile
apps/edge/app/: main.py
apps/edge/app/api/: cart.py  checkout.py  dispatch.py  health.py  inventory.py  mock_cloud.py  outbox.py  products.py  sync.py
apps/edge/app/infra/: db.py  events.py  inventory.py  migrate.py  outbox.py  settings.py  sync_client.py  sync_push.py  totals.py
apps/edge/app/migrations/: 0001_products.sql  0002_cart.sql  0003_orders.sql  0004_outbox.sql  0005_local_dispatch.sql  0006_sync_mock.sql  0007_inventory.sql
apps/edge/app/modules/: retail_demo.py  retail_inventory.py
apps/edge/cloud/app/: main.py
apps/edge/cloud/app/api/: admin_devices.py  ingest.py  reports.py
apps/edge/cloud/app/infra/: auth.py  auth_devices.py  db.py  migrate.py  rate_limit.py
apps/edge/cloud/app/migrations/: 0001_cloud_inbox.sql  0002_devices_auth.sql
apps/edge/demo_ui/: app.py  pyproject.toml
apps/edge/demo_ui/infra/: auth.py  http_client.py  settings.py  ui.py
apps/edge/demo_ui/pages/: 1_Products.py  2_Cart.py  3_Checkout.py  4_Local_Events.py  5_Sync.py  6_Cloud_Reports.py  7_Admin_Devices.py
docs/: architecture.md
tests/: test_smoke_edge_health.py
